--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,11 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup gcloud
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Setup gcloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Configure Docker for Artifact Registry
         run: |
@@ -28,8 +32,8 @@ jobs:
 
       - name: Build Atmosphere image
         run: |
-          docker build -t ${GCP_REGION}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${ARTIFACT_REPO}/atmosphere:latest ./k8s/atmosphere
-          docker push ${GCP_REGION}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${ARTIFACT_REPO}/atmosphere:latest
+          docker build -t ${GCP_REGION}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ARTIFACT_REPO}/atmosphere:latest ./k8s/atmosphere
+          docker push ${GCP_REGION}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ARTIFACT_REPO}/atmosphere:latest
 
   deploy:
     needs: build
@@ -37,15 +41,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup gcloud
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Setup gcloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Get GKE credentials
         run: |
-          gcloud container clusters get-credentials ${CLUSTER_NAME} --zone ${ZONE} --project ${{ secrets.GCP_PROJECT }}
+          gcloud container clusters get-credentials ${CLUSTER_NAME} --zone ${ZONE} --project ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Deploy Atmosphere manifests
         run: |
