--- a/k8s/atmosphere/deployment.yaml
+++ b/k8s/atmosphere/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: atmosphere
-          image: asia-southeast2-docker.pkg.dev/project_id/openstack-images/atmosphere:latest
+          image: asia-southeast2-docker.pkg.dev/arboreal-cosmos-440011-r8/openstack-images/atmosphere
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
